fixing html adding script

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -8,19 +8,20 @@
   </head>
   <body>
     <body>
-      <main class="container">
-        <section class="profile"></section>
+    <main class="container">
+      <section class="profile"></section>
 
-        <form class="filter">
-          <input type="text" value="" />
-          <button type="submit">Buscar</button>
-        </form>
+      <form class="filter">
+        <input type="text" value="AtlasGold" />
+        <button type="submit">Buscar</button>
+      </form>
 
-        <section class="repo">
-          <h2>Repositórios</h2>
-          <div class="repo-list"></div>
-        </section>
-      </main>
-    </body>
+      <section class="repo">
+        <h2>Repositórios</h2>
+        <div class="repo-list"></div>
+      </section>
+    </main>
+
+    <script type="module" src="javascript/index.js"></script>
   </body>
 </html>
