--- a/index.html
+++ b/index.html
@@ -4,23 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css" />
+    <title>GitHub Profile</title>
   </head>
   <body>
-    <body>
-    <main class="container">
-      <section class="profile"></section>
+    <div class="master">
+      <main class="container">
+        <section class="profile"></section>
 
-      <form class="filter">
-        <input type="text" value="AtlasGold" />
-        <button type="submit">Buscar</button>
-      </form>
+        <form class="filter">
+          <input type="text" value="AtlasGold" />
+          <button type="submit">Search 🔎</button>
+        </form>
 
-      <section class="repo">
-        <h2>Repositórios</h2>
-        <div class="repo-list"></div>
-      </section>
-    </main>
+        <section class="repo">
+          <h2>Starred repositories ⭐</h2>
+          <div class="repo-list"></div>
+        </section>
+      </main>
+    </div>
 
     <script type="module" src="javascript/index.js"></script>
   </body>
